# strand

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
.github/workflows/: docker-ci.yml  docker-edge.yml  docker-publish.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/versions/: b1c2d3e4f5a6_add_notices_to_uploaded_files.py  b2c3d4e5f6a7_idempotency_fields.py  c3d4e5f6a7b8_uploaded_files_deleted_at.py  c4d5e6f7a8b9_encrypt_phi_columns_at_rest.py  d4e5f6a7b8c9_add_summary_items.py  e1f2a3b4c5d6_add_cancel_and_progress_to_uploaded_files.py  e5f6a7b8c9d0_records_ordering_index.py  f2a3b4c5d6e7_add_llm_settings_tables.py
backend/app/: config.py  main.py
backend/app/api/: audit.py  dashboard.py  observations.py  records.py  router.py  summary.py  timeline.py  upload.py
backend/app/middleware/: audit.py  encryption.py
backend/app/models/: __init__.py  ai_summary.py  encrypted_types.py  llm_settings.py  record.py  record_version.py  summary_item.py  uploaded_file.py  user.py
backend/app/schemas/: auth.py  summary.py  timeline.py  upload.py
backend/app/services/: auth_service.py  timeline_preview.py  timeline_service.py
backend/app/services/ai/: phi_location_ner.py  phi_ner.py  phi_presidio.py  phi_scrubber.py
backend/app/services/ai/llm/: __init__.py  anthropic.py  gemini.py  openai_compat.py  registry.py  types.py
backend/app/services/dedup/: detector.py
backend/app/services/extraction/: clinical_examples.py  entity_extractor.py  entity_to_fhir.py  entity_validator.py  extraction_engine.py  intra_doc_dedup.py  section_parser.py  terminology.py  text_extractor.py
backend/app/services/extraction/terminology_data/: NOTICE.md
backend/app/services/ingestion/: cda_parser.py  content_hash.py  coordinator.py  epic_parser.py  fhir_parser.py  idempotent_inserter.py  reextraction.py
backend/app/services/ingestion/epic_mappers/: encounters.py  medications.py
backend/app/services/utils/: source_label.py  unit_normalization.py
backend/app/utils/: date_utils.py  file_utils.py
backend/scripts/: backfill_idempotency_fields.py  build_terminology_index.py  encrypt_existing_uploads.py  make_demo_bundle.py  phi_recall_benchmark.py  phi_shadow_compare.py
backend/tests/: conftest.py  test_at_rest_encryption.py  test_audit_middleware.py  test_audit_search_privacy.py  test_auth_hardening.py  test_content_hash.py  test_date_utils.py  test_dedup_orchestrator.py  test_encounter_enrichment.py  test_entity_attr_contract.py  test_entity_extractor_concurrency.py  test_entity_extractor_progress.py  test_entity_to_fhir_hash.py  test_entity_to_fhir_richness.py  test_entity_validator.py  test_epic_mapper_richness.py  test_extraction_backend_routing.py  test_extraction_date_a1.py  test_extraction_date_attribution.py  test_extraction_eval_fixtures.py  test_extraction_event_loop.py  test_extraction_failure_surfacing.py  test_extraction_fidelity_realdata.py  test_extraction_performance_fidelity.py  test_extraction_prompt_guards.py  test_extraction_semaphore_loopsafe.py  test_faster_extraction_fidelity.py  test_fhir_parser_richness.py  test_file_encryption.py  test_hipaa_compliance.py  test_idempotent_inserter.py  test_identity.py  test_immunization_extraction.py  test_intra_doc_dedup.py  test_llm_anthropic.py  test_llm_content_parts.py  test_llm_gemini.py  test_llm_openai_compat.py  test_llm_registry.py  test_llm_registry_config.py  (+44 more)
backend/tests/fidelity/: test_incremental_fidelity.py
backend/tests/fixtures/extraction_eval/: phone_note.expected.json  phone_note.txt  transcript_visit.expected.json  transcript_visit.txt
docs/: e2e-gap-analysis.md  extraction-remediation.md  frontend-backend-todos.md  operations-backup-restore.md  operations-local-https.md  oss-adoption-design.md  oss-landscape-analysis.md  session-2026-06-17-summary.md
frontend/: .dockerignore  Dockerfile  next.config.ts  playwright.config.ts  playwright.unit.config.ts  portless.json
frontend/e2e/: admin-consolidation.spec.ts  admin-dedup.spec.ts  admin-extractions.spec.ts  admin-records.spec.ts  admin-system.spec.ts  (+27 more)
scripts/: e2e_full_v2.py  gen-secrets.sh  run-https.sh  setup-local.sh
(+91 files in other folders)
