[project]
name = "ai-web-records-backend"
version = "0.1.0"
description = "FHIR-compliant personal health records API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "bcrypt<5",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "fhir-resources>=8.2.0",
    "fhirpathpy>=2.1.0",
    "httpx>=0.28.1",
    "ijson>=3.4.0.post0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "google-genai>=1.33.0",
    "langextract>=1.0.7",
    "striprtf>=0.0.28",
    "Pillow>=11.0.0",
    "pdfplumber>=0.11",
    "python-fhir-converter>=0.3.0",
    # WS-C: fast C-backed fuzzy matching (dedup token_set_ratio + terminology fuzzy fallback).
    "rapidfuzz>=3.9",
    # PHI scrubbing: spaCy PERSON NER redacts free-text names before any Gemini
    # call. Requires the model: `python -m spacy download en_core_web_md`.
    # Fails open (NER skipped) if the model is absent.
    "spacy>=3.7,<4",
    # Guard: google-genai uses PEP 728 TypedDict `extra_items`, which needs a recent
    # typing_extensions. The clinical-nlp extra (scispaCy/spaCy stack) can otherwise
    # drag it down and break `from google import genai`. Pin the floor.
    "typing-extensions>=4.15",
]

[project.optional-dependencies]
# WS-A: local clinical NLP (EXTRACTION_ENGINE=local|hybrid; default gemini).
# Versions PINNED to the validated, mutually-resolvable set (a naive `>=` resolve
# backtracks medspaCy to a broken-sdist build). spaCy==3.7.5 is scispaCy's ceiling
# and co-resolves with presidio (phi-location) — so clinical-nlp + phi-location can
# share ONE interpreter. After install, add the model + matching spaCy model:
#   pip install -e ".[clinical-nlp]" && pip install <en_ner_bc5cdr_md 0.5.4 URL> \
#     && python -m spacy download en_core_web_md  # (3.7.x to match spaCy 3.7.5)
clinical-nlp = ["scispacy==0.6.2", "medspacy==1.3.1", "spacy==3.7.5"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Safety net: any single test that runs longer than this fails instead of
# hanging the whole run forever. Slow/Gemini tests are deselected by default;
# if you --run-slow, bump this or mark those tests with @pytest.mark.timeout.
timeout = 120
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "fidelity: marks tests requiring real user-provided data",
]
